src/parser/generated/GameMakerLanguageParser.js
// Generated from GameMakerLanguageParser.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import GameMakerLanguageParserListener from './GameMakerLanguageParserListener.js';
import GameMakerLanguageParserVisitor from './GameMakerLanguageParserVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class GameMakerLanguageParser extends antlr4.Parser {

    static grammarFileName = "GameMakerLanguageParser.g4";
    static literalNames = [ null, null, null, "'['", "'[|'", "'[?'", "'[#'", 
                            "'[@'", "'[$'", "']'", "'('", "')'", null, null, 
                            "'}'", "'begin'", "'end'", "';'", "','", null, 
                            "':'", "'.'", "'++'", "'--'", "'+'", "'-'", 
                            "'~'", null, "'*'", "'/'", "'div'", null, "'**'", 
                            "'?'", "'??'", "'??='", "'>>'", "'<<'", "'<'", 
                            "'>'", "'<='", "'>='", null, null, "'&'", "'^'", 
                            "'|'", null, null, null, "'*='", "'/='", "'+='", 
                            "'-='", "'%='", "'<<='", "'>>='", "'&='", "'^='", 
                            "'|='", "'#'", "'$'", "'@'", "'undefined'", 
                            "'noone'", null, null, null, null, null, "'break'", 
                            "'exit'", "'do'", "'case'", "'else'", "'new'", 
                            "'var'", "'globalvar'", "'catch'", "'finally'", 
                            "'return'", "'continue'", "'for'", "'switch'", 
                            "'while'", "'until'", "'repeat'", "'function'", 
                            "'with'", "'default'", "'if'", "'then'", "'throw'", 
                            "'delete'", "'try'", "'enum'", "'constructor'", 
                            "'static'", "'#macro'", "'\\'", "'#define'", 
                            "'#region'", "'#endregion'" ];
    static symbolicNames = [ null, "MultiLineComment", "SingleLineComment", 
                             "OpenBracket", "ListAccessor", "MapAccessor", 
                             "GridAccessor", "ArrayAccessor", "StructAccessor", 
                             "CloseBracket", "OpenParen", "CloseParen", 
                             "OpenBrace", "TemplateStringEndExpression", 
                             "CloseBrace", "Begin", "End", "SemiColon", 
                             "Comma", "Assign", "Colon", "Dot", "PlusPlus", 
                             "MinusMinus", "Plus", "Minus", "BitNot", "Not", 
                             "Multiply", "Divide", "IntegerDivide", "Modulo", 
                             "Power", "QuestionMark", "NullCoalesce", "NullCoalescingAssign", 
                             "RightShiftArithmetic", "LeftShiftArithmetic", 
                             "LessThan", "MoreThan", "LessThanEquals", "GreaterThanEquals", 
                             "Equals", "NotEquals", "BitAnd", "BitXOr", 
                             "BitOr", "And", "Or", "Xor", "MultiplyAssign", 
                             "DivideAssign", "PlusAssign", "MinusAssign", 
                             "ModulusAssign", "LeftShiftArithmeticAssign", 
                             "RightShiftArithmeticAssign", "BitAndAssign", 
                             "BitXorAssign", "BitOrAssign", "NumberSign", 
                             "DollarSign", "AtSign", "UndefinedLiteral", 
                             "NoOneLiteral", "BooleanLiteral", "IntegerLiteral", 
                             "DecimalLiteral", "BinaryLiteral", "HexIntegerLiteral", 
                             "Break", "Exit", "Do", "Case", "Else", "New", 
                             "Var", "GlobalVar", "Catch", "Finally", "Return", 
                             "Continue", "For", "Switch", "While", "Until", 
                             "Repeat", "Function_", "With", "Default", "If", 
                             "Then", "Throw", "Delete", "Try", "Enum", "Constructor", 
                             "Static", "Macro", "EscapedNewLine", "Define", 
                             "Region", "EndRegion", "Identifier", "StringLiteral", 
                             "TemplateStringStart", "VerbatimStringLiteral", 
                             "WhiteSpaces", "LineTerminator", "UnexpectedCharacter", 
                             "RegionCharacters", "RegionEOL", "TemplateStringEnd", 
                             "TemplateStringStartExpression", "TemplateStringText" ];
    static ruleNames = [ "program", "statementList", "statement", "block", 
                         "ifStatement", "iterationStatement", "withStatement", 
                         "switchStatement", "continueStatement", "breakStatement", 
                         "exitStatement", "emptyStatement", "caseBlock", 
                         "caseClauses", "caseClause", "defaultClause", "throwStatement", 
                         "tryStatement", "catchProduction", "finallyProduction", 
                         "returnStatement", "deleteStatement", "literalStatement", 
                         "assignmentExpression", "variableDeclarationList", 
                         "varModifier", "variableDeclaration", "globalVarStatement", 
                         "newExpression", "lValueStartExpression", "lValueExpression", 
                         "lValueChainOperator", "lValueFinalOperator", "expressionSequence", 
                         "expressionOrFunction", "expression", "callStatement", 
                         "implicitCallStatement", "callableExpression", 
                         "preIncDecExpression", "postIncDecExpression", 
                         "incDecStatement", "accessor", "arguments", "argumentList", 
                         "argument", "trailingComma", "assignmentOperator", 
                         "literal", "templateStringLiteral", "templateStringAtom", 
                         "arrayLiteral", "elementList", "structLiteral", 
                         "structItem", "propertyAssignment", "propertyIdentifier", 
                         "functionDeclaration", "constructorClause", "parameterList", 
                         "parameterArgument", "identifier", "enumeratorDeclaration", 
                         "enumeratorList", "enumeratorItem", "enumerator", 
                         "macroStatement", "defineStatement", "regionStatement", 
                         "identifierStatement", "softKeyword", "propertySoftKeyword", 
                         "openBlock", "closeBlock", "eos", "macroToken" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = GameMakerLanguageParser.ruleNames;
        this.literalNames = GameMakerLanguageParser.literalNames;
        this.symbolicNames = GameMakerLanguageParser.symbolicNames;

            this.isAssignmentOperatorToken = function (tokenType) {
                return tokenType === GameMakerLanguageParser.MultiplyAssign
                    || tokenType === GameMakerLanguageParser.DivideAssign
                    || tokenType === GameMakerLanguageParser.ModulusAssign
                    || tokenType === GameMakerLanguageParser.PlusAssign
                    || tokenType === GameMakerLanguageParser.MinusAssign
                    || tokenType === GameMakerLanguageParser.LeftShiftArithmeticAssign
                    || tokenType === GameMakerLanguageParser.RightShiftArithmeticAssign
                    || tokenType === GameMakerLanguageParser.BitAndAssign
                    || tokenType === GameMakerLanguageParser.BitXorAssign
                    || tokenType === GameMakerLanguageParser.BitOrAssign
                    || tokenType === GameMakerLanguageParser.NullCoalescingAssign
                    || tokenType === GameMakerLanguageParser.Assign;
            };

            this.isLikelyAssignmentStatement = function () {
                let lookahead = 1;
                let parenDepth = 0;
                let bracketDepth = 0;
                let braceDepth = 0;

                while (lookahead < 2048) {
                    const token = this._input.LT(lookahead);
                    if (!token) {
                        return false;
                    }

                    const tokenType = token.type;

                    if (
                        tokenType === GameMakerLanguageParser.EOF
                        || tokenType === GameMakerLanguageParser.SemiColon
                        || (tokenType === GameMakerLanguageParser.CloseParen
                            && parenDepth === 0
                            && bracketDepth === 0
                            && braceDepth === 0)
                    ) {
                        return false;
                    }

                    if (tokenType === GameMakerLanguageParser.OpenParen) {
                        parenDepth += 1;
                    } else if (tokenType === GameMakerLanguageParser.CloseParen) {
                        parenDepth = Math.max(0, parenDepth - 1);
                    } else if (
                        tokenType === GameMakerLanguageParser.OpenBracket
                        || tokenType === GameMakerLanguageParser.ListAccessor
                        || tokenType === GameMakerLanguageParser.MapAccessor
                        || tokenType === GameMakerLanguageParser.GridAccessor
                        || tokenType === GameMakerLanguageParser.ArrayAccessor
                        || tokenType === GameMakerLanguageParser.StructAccessor
                    ) {
                        bracketDepth += 1;
                    } else if (tokenType === GameMakerLanguageParser.CloseBracket) {
                        bracketDepth = Math.max(0, bracketDepth - 1);
                    } else if (tokenType === GameMakerLanguageParser.OpenBrace || tokenType === GameMakerLanguageParser.Begin) {
                        braceDepth += 1;
                    } else if (tokenType === GameMakerLanguageParser.CloseBrace || tokenType === GameMakerLanguageParser.End) {
                        braceDepth = Math.max(0, braceDepth - 1);
                    }

                    if (parenDepth === 0 && bracketDepth === 0 && braceDepth === 0 && this.isAssignmentOperatorToken(tokenType)) {
                        return true;
                    }

                    lookahead += 1;
                }

                return false;
            };

            this.isLikelyIncDecStatement = function () {
                if (
                    this._input.LA(1) === GameMakerLanguageParser.PlusPlus
                    || this._input.LA(1) === GameMakerLanguageParser.MinusMinus
                ) {
                    return true;
                }

                let lookahead = 1;
                let parenDepth = 0;
                let bracketDepth = 0;
                let braceDepth = 0;
                let lastTopLevelTokenType = null;

                while (lookahead < 2048) {
                    const token = this._input.LT(lookahead);
                    if (!token) {
                        return false;
                    }

                    const tokenType = token.type;

                    if (
                        tokenType === GameMakerLanguageParser.EOF
                        || tokenType === GameMakerLanguageParser.SemiColon
                        || (tokenType === GameMakerLanguageParser.CloseParen
                            && parenDepth === 0
                            && bracketDepth === 0
                            && braceDepth === 0)
                    ) {
                        return (
                            lastTopLevelTokenType === GameMakerLanguageParser.PlusPlus
                            || lastTopLevelTokenType === GameMakerLanguageParser.MinusMinus
                        );
                    }

                    if (tokenType === GameMakerLanguageParser.OpenParen) {
                        parenDepth += 1;
                    } else if (tokenType === GameMakerLanguageParser.CloseParen) {
                        parenDepth = Math.max(0, parenDepth - 1);
                    } else if (
                        tokenType === GameMakerLanguageParser.OpenBracket
                        || tokenType === GameMakerLanguageParser.ListAccessor
                        || tokenType === GameMakerLanguageParser.MapAccessor
                        || tokenType === GameMakerLanguageParser.GridAccessor
                        || tokenType === GameMakerLanguageParser.ArrayAccessor
                        || tokenType === GameMakerLanguageParser.StructAccessor
                    ) {
                        bracketDepth += 1;
                    } else if (tokenType === GameMakerLanguageParser.CloseBracket) {
                        bracketDepth = Math.max(0, bracketDepth - 1);
                    } else if (tokenType === GameMakerLanguageParser.OpenBrace || tokenType === GameMakerLanguageParser.Begin) {
                        braceDepth += 1;
                    } else if (tokenType === GameMakerLanguageParser.CloseBrace || tokenType === GameMakerLanguageParser.End) {
                        braceDepth = Math.max(0, braceDepth - 1);
                    }

                    if (parenDepth === 0 && bracketDepth === 0 && braceDepth === 0) {
                        lastTopLevelTokenType = tokenType;
                    }

                    lookahead += 1;
                }

                return false;
            };

    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 2:
    	    		return this.statement_sempred(localctx, predIndex);
    	case 35:
    	    		return this.expression_sempred(localctx, predIndex);
    	case 36:
    	    		return this.callStatement_sempred(localctx, predIndex);
    	case 37:
    	    		return this.implicitCallStatement_sempred(localctx, predIndex);
    	case 69:
    	    		return this.identifierStatement_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    statement_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.isLikelyAssignmentStatement();
    		case 1:
    			return this.isLikelyIncDecStatement();
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 17);
    		case 3:
    			return this.precpred(this._ctx, 16);
    		case 4:
    			return this.precpred(this._ctx, 15);
    		case 5:
    			return this.precpred(this._ctx, 14);
    		case 6:
    			return this.precpred(this._ctx, 13);
    		case 7:
    			return this.precpred(this._ctx, 12);
    		case 8:
    			return this.precpred(this._ctx, 11);
    		case 9:
    			return this.precpred(this._ctx, 10);
    		case 10:
    			return this.precpred(this._ctx, 9);
    		case 11:
    			return this.precpred(this._ctx, 8);
    		case 12:
    			return this.precpred(this._ctx, 7);
    		case 13:
    			return this.precpred(this._ctx, 6);
    		case 14:
    			return this.precpred(this._ctx, 3);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    callStatement_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 15:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    implicitCallStatement_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 16:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    identifierStatement_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 17:
    			return this._input.LA(1) !== GameMakerLanguageParser.Dot;
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, GameMakerLanguageParser.RULE_program);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 153;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	        if(la_===1) {
	            this.state = 152;
	            this.statementList();

	        }
	        this.state = 155;
	        this.match(GameMakerLanguageParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statementList() {
	    let localctx = new StatementListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, GameMakerLanguageParser.RULE_statementList);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 157;
	        		this.statement();
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 160; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,1, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, GameMakerLanguageParser.RULE_statement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 190;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 162;
	            this.block();
	            break;

	        case 2:
	            this.state = 163;
	            this.emptyStatement();
	            break;

	        case 3:
	            this.state = 164;
	            this.ifStatement();
	            break;

	        case 4:
	            this.state = 165;
	            this.variableDeclarationList();
	            break;

	        case 5:
	            this.state = 166;
	            this.iterationStatement();
	            break;

	        case 6:
	            this.state = 167;
	            this.continueStatement();
	            break;

	        case 7:
	            this.state = 168;
	            this.breakStatement();
	            break;

	        case 8:
	            this.state = 169;
	            this.returnStatement();
	            break;

	        case 9:
	            this.state = 170;
	            this.withStatement();
	            break;

	        case 10:
	            this.state = 171;
	            this.switchStatement();
	            break;

	        case 11:
	            this.state = 172;
	            this.tryStatement();
	            break;

	        case 12:
	            this.state = 173;
	            this.throwStatement();
	            break;

	        case 13:
	            this.state = 174;
	            this.exitStatement();
	            break;

	        case 14:
	            this.state = 175;
	            this.macroStatement();
	            break;

	        case 15:
	            this.state = 176;
	            this.defineStatement();
	            break;

	        case 16:
	            this.state = 177;
	            this.regionStatement();
	            break;

	        case 17:
	            this.state = 178;
	            this.enumeratorDeclaration();
	            break;

	        case 18:
	            this.state = 179;
	            this.globalVarStatement();
	            break;

	        case 19:
	            this.state = 180;
	            this.implicitCallStatement(0);
	            break;

	        case 20:
	            this.state = 181;
	            if (!( this.isLikelyAssignmentStatement())) {
	                throw new antlr4.error.FailedPredicateException(this, "this.isLikelyAssignmentStatement()");
	            }
	            this.state = 182;
	            this.assignmentExpression();
	            break;

	        case 21:
	            this.state = 183;
	            if (!( this.isLikelyIncDecStatement())) {
	                throw new antlr4.error.FailedPredicateException(this, "this.isLikelyIncDecStatement()");
	            }
	            this.state = 184;
	            this.incDecStatement();
	            break;

	        case 22:
	            this.state = 185;
	            this.callStatement(0);
	            break;

	        case 23:
	            this.state = 186;
	            this.functionDeclaration();
	            break;

	        case 24:
	            this.state = 187;
	            this.deleteStatement();
	            break;

	        case 25:
	            this.state = 188;
	            this.literalStatement();
	            break;

	        case 26:
	            this.state = 189;
	            this.identifierStatement();
	            break;

	        }
	        this.state = 193;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        if(la_===1) {
	            this.state = 192;
	            this.eos();
